tests/errors/integer_trailing.ki
discard Integer("12.5")
